added art projects

--- a/css/style.css
+++ b/css/style.css
@@ -1903,3 +1903,15 @@ body.offcanvas .colorlib-nav-toggle {
   width: 100%;
   margin-bottom: 20px;
 }
+
+.gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.gallery > div {
+  margin: 10px 0;
+}
